[gd_scene load_steps=6 format=3 uid="uid://bgbo16ajjb7ix"]

[ext_resource type="PackedScene" uid="uid://cycunt3b4mv6w" path="res://src/scenes/grid.tscn" id="1_303gx"]
[ext_resource type="Script" path="res://src/scenes/level_template.gd" id="1_g1usv"]
[ext_resource type="Script" path="res://src/scenes/button.gd" id="2_mhnim"]
[ext_resource type="Script" path="res://src/scenes/button_container.gd" id="2_yebkp"]
[ext_resource type="Texture2D" uid="uid://b6krfmitm80y1" path="res://assets/rotate.png" id="3_6gcib"]

[node name="LevelTemplate" type="Node2D"]
script = ExtResource("1_g1usv")

[node name="GridScene" parent="." instance=ExtResource("1_303gx")]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(64, 64)
offset_left = 287.0
offset_top = 754.0
offset_right = 407.0
offset_bottom = 850.0
script = ExtResource("2_yebkp")

[node name="LeftButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon_alignment = 1
script = ExtResource("2_mhnim")

[node name="Sprite" type="Sprite2D" parent="HBoxContainer/LeftButton"]
rotation = -0.989602
texture = ExtResource("3_6gcib")

[node name="RightButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_mhnim")

[node name="Sprite" type="Sprite2D" parent="HBoxContainer/RightButton"]
rotation = 0.989602
texture = ExtResource("3_6gcib")
flip_h = true
